WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
64039
DFG JIT implementation of op_call results in regressions on sunspider controlflow-recursive
https://bugs.webkit.org/show_bug.cgi?id=64039
Summary
DFG JIT implementation of op_call results in regressions on sunspider control...
Filip Pizlo
Reported
2011-07-06 15:41:29 PDT
The op_call implementation causes more code to be compiled by DFG, and is revealing bad speculation decisions, which result in large performance regressions especially on sunspider controlflow-recursive.
Attachments
the patch
(3.84 KB, patch)
2011-07-06 17:35 PDT
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2011-07-06 17:35:35 PDT
Created
attachment 99906
[details]
the patch
WebKit Review Bot
Comment 2
2011-07-06 21:04:42 PDT
Comment on
attachment 99906
[details]
the patch Clearing flags on attachment: 99906 Committed
r90533
: <
http://trac.webkit.org/changeset/90533
>
WebKit Review Bot
Comment 3
2011-07-06 21:04:45 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug