2011-07-06  Filip Pizlo  <fpizlo@apple.com>

DFG JIT implementation of op_call results in regressions on sunspider
        controlflow-recursive.
        https://bugs.webkit.org/show_bug.cgi?id=64039

        Reviewed by Gavin Barraclough.

        * dfg/DFGByteCodeParser.cpp:
        (JSC::DFG::ByteCodeParser::isSmallInt32Constant):
        (JSC::DFG::ByteCodeParser::parseBlock):
        * dfg/DFGSpeculativeJIT.h:
        (JSC::DFG::SpeculativeJIT::isInteger):

Canonical link: https://commits.webkit.org/79798@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@90533 268f45cc-cd09-0410-ab3c-d52691b4dbfc